# install_packages

./: README.md  pyproject.toml
install_packages/: class_instala_yay_pacman.py  constantes.py  install_package.py  utils.py
pacotes_amostra/: pacman.txt  yay.txt
