[tool.poetry]
name = "install-packages"
version = "0.1.0"
description = ""
authors = ["abelsalim <abelsalim@proton.me>"]
readme = "README.md"
packages = [{include = "install_packages"}]

[tool.poetry.dependencies]
python = "^3.11"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
